2003-08-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

        * library interface version 11 frozen

2003-08-26  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-chainsetup.h (multitrack_mode_offset): Added.

2003-08-14  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-control-base.h (engine_start): Moved to public
	scope, signature changed.

2003-08-13  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-chainsetup.cpp (add_default_midi_device): Added.

2003-05-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-audio-time.h (set_samples_per_second_keeptime): Added. 
	* library version to 11:0:2

2003-02-15  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* library interface version 10 frozen
	
2003-02-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.cpp (is_finite_length): Added.

2003-02-03  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.h (is_locked_for_editing): Added.

	* eca-engine.h (ECA_ENGINE::Engine_command): Added 
	enums 'ep_edit_lock' and 'ep_edit_unlock'.

2003-02-02  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-engine.h (ECA_ENGINE::Engine_command): Added 
	enum 'ep_prepare'.

2003-01-30  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* samplebuffer.cpp (resample_get_quality): added

	* samplebuffer.cpp (resample_set_quality): added

	* library version to 10:0:1

2003-01-07  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* library interface version 9 frozen

2002-11-18  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-chainsetup-position.h: Added a separate public
	API for maximum chainsetup length. This is to avoid
	confusion between maximum and actual lengths.

2002-10-30  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-control.cpp (last_value_to_string): added
	* eca-logger-wellformed.cpp (create_wellformed_message): added

2002-10-26  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* eca-chainop.h (output_samples): renamed to max_output_samples()
	* eca-audio-position.h (set_length_in_samples,
	length_in_samples, set_position_in_samples,