@@ -32,8 +32,8 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=11
-LIBECASOUND_VERSION_AGE=2
+LIBECASOUND_VERSION=12
+LIBECASOUND_VERSION_AGE=3
 LIBECASOUNDC_VERSION=1
 LIBECASOUNDC_VERSION_AGE=0
 LIBKVUTILS_VERSION=6
