@@ -104,6 +104,7 @@ class CHAIN : public ECA_AUDIO_POSITION {
   std::string to_string(void) const;
   std::string chain_operator_to_string(CHAIN_OPERATOR* chainop) const;
   std::string controller_to_string(GENERIC_CONTROLLER* gctrl) const;
+  std::string operator_parameters_to_string(const OPERATOR* chainop) const;
 
   /** @name Functions implemented from ECA_SAMPLERATE_AWARE */
   /*@{*/
