@@ -1,3 +1,8 @@
+2004-05-02  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* eca-chain.h (operator_params_to_string): Added.
+        * library interface version to 12:0:3
+
 2003-08-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
         * library interface version 11 frozen
